--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       target: frankenphp_prod
+    image: hydra-token-retrieval
     environment:
       APP_SECRET: ${APP_SECRET}
       MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
